snapshots/aws_shared_vpc/aws_configs/accounts/317892581468/us-east-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-00a089ceb7e777c05",
     "RouteTableId": "rtb-09af35020d4d627fb"
    }
   ],
   "OwnerId": "317892581468",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-09af35020d4d627fb",
   "Routes": [
    {
     "DestinationCidrBlock": "10.3.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-075ade3ce7e8d9fd0"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-0dcdb8b34935bfb46",
     "RouteTableId": "rtb-0b1ab092e583c1c3a",
     "SubnetId": "subnet-072b7e0a2a6c2e3a3"
    },
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-048a57a4f53058691",
     "RouteTableId": "rtb-0b1ab092e583c1c3a",
     "SubnetId": "subnet-056ebbbb47985c3c5"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0b1ab092e583c1c3a",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "10.4.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-08222c132440e92d7"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-072e5314d4832dc50",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-02008b4ca4a5ced27"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-0a9fa7d5fee3d7b7f",
     "RouteTableId": "rtb-0ed903edb8ea99438",
     "SubnetId": "subnet-08186ace76bbb0477"
    }
   ],
   "OwnerId": "317892581468",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0ed903edb8ea99438",
   "Routes": [
    {
     "DestinationCidrBlock": "10.3.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "10.4.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-0cb653aa63fcc5899"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-01f6578070d6dc8fe",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "dev-non_shared"
    }
   ],
   "VpcId": "vpc-075ade3ce7e8d9fd0"
  }
 ]
}
